--- a/foo.html
+++ b/foo.html
@@ -2,4 +2,4 @@
 layout: post
 title: Blogging Like a Hacker
 ---
-<html><body>some text here</body></html>
+<html><body>some text here with title {{title}}.</body></html>
