--- a/foo.html
+++ b/foo.html
@@ -1,5 +1,10 @@
 ---
-layout: post
-title: Blogging Like a Hacker
+layout: default
+title: Testing Markdown
 ---
-<html><body>some text here with title {{title}}.</body></html>
+
+This is a paragraph
+
+This is another one.
+
+Sorry, forgot a period on the first para.
